added a new opportunity

--- a/index.html
+++ b/index.html
@@ -66,7 +66,14 @@
                         <td>Student Program</td>
                         <td><a href="https://developers.google.com/community/gdsc/leads">GDSC</a></td>
                     </tr>
-
+                    
+                    <tr>
+                        <td>Alfy's Intro to programming</td>
+                        <td>October 31st</td>
+                        <td>November 28th</td>
+                        <td>Bootcamp</td>
+                        <td><a href="https://developers.google.com/community/gdsc/leads">Alfy</a></td>
+                    </tr>
 
                     <!-- add your code here
                     under a <tr> tag inside a 
