fix: changes to the code

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <title>Index</title>
     <style></style>
   </head>
+
   <body>
     <div class="outer-wrapper">
       <div class="table-wrapper">
@@ -69,6 +70,14 @@
               </td>
             </tr>
 
+            <!-- add your code here
+                    under a <tr> tag inside a 
+                    <td>write the Name of opportunity</td>
+                    <td>Month of opening</td>
+                    <td>Month of closing</td> 
+                    <td>Type(Student program,internship, etc)</td>
+                    <td>Website Link to apply or read more from</td>-->
+
             <tr>
               <td>HNG Internship</td>
               <td>September</td>
@@ -79,19 +88,11 @@
 
             <tr>
               <td>Outreachy</td>
-              <td>December to March ( 1st phase)</td>
-              <td>May to August ( 2nd Phase)</td>
+              <td>December</td>
+              <td>March</td>
               <td>Internship</td>
               <td><a href="https://www.outreachy.org/">Outreachy</a></td>
             </tr>
-
-            <!-- add your code here
-                    under a <tr> tag inside a 
-                    <td>write the Name of oppurtunity</td>
-                    <td>Month of opening</td>
-                    <td>Month of closing</td> 
-                    <td>Type(Student program,internship, etc)</td>
-                    <td>Website Link to apply or read more from</td>-->
           </tbody>
         </table>
         <script>
