feat: second-phase

--- a/index.html
+++ b/index.html
@@ -93,6 +93,14 @@
               <td>Internship</td>
               <td><a href="https://www.outreachy.org/">Outreachy</a></td>
             </tr>
+
+            <tr>
+              <td>Outreachy</td>
+              <td>May</td>
+              <td>August</td>
+              <td>Internship</td>
+              <td><a href="https://www.outreachy.org/">Outreachy</a></td>
+            </tr>
           </tbody>
         </table>
         <script>
