add github campus expert oppurtinity with background gradiant

--- a/index.html
+++ b/index.html
@@ -66,11 +66,11 @@
                     </tr>
                         
                      <tr>
-                        <td>Hacktoberfest 2022 Letsgoo!</td>
-                        <td>October</td>
-                        <td>October :(</td>
+                        <td>Github Campus Expert</td>
+                        <td>February</td>
+                        <td>February</td>
                         <td>Hackathon</td>
-                        <td><a href="hacktoberfest.com">More about Hacktoberfest!</a></td>
+                        <td><a href="https://githubcampus.expert/">Github Campus Expert</a></td>
                      </tr>
 
                     <!-- add your code here
