add gradiant background add new oppurtunity

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                         <td>Github Campus Expert</td>
                         <td>February</td>
                         <td>February</td>
-                        <td>Hackathon</td>
+                        <td>Student Program</td>
                         <td><a href="https://githubcampus.expert/">Github Campus Expert</a></td>
                      </tr>
 
