--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
               <td>August</td>
               <td>September</td>
               <td>2-6 Months Internship</td>
-              <td><a href="https://www.mitacs.ca/en/programs/globalink/globalink-research-internship">MITACS</a></td>
+              <td><a href="https://www.ntu.edu.sg/about-us/global/india-connect-ntu">NTU-India Connect</a></td>
             </tr>
 
           </tbody>
