--- a/index.html
+++ b/index.html
@@ -116,6 +116,14 @@
               <td>2-6 Months Internship</td>
               <td><a href="https://www.ntu.edu.sg/about-us/global/india-connect-ntu">NTU-India Connect</a></td>
             </tr>
+             <tr>
+              <td>Microsoft Engage</td>
+              <td>April</td>
+              <td>July</td>
+              <td>Student Engagement and Mentorship program.</td>
+              <td><a href="https://acehacker.com/microsoft/engage2022/">Microsoft Engage</a></td>
+            </tr>
+            
 
           </tbody>
         </table>
