added new job opportunity

--- a/index.html
+++ b/index.html
@@ -117,6 +117,14 @@
               <td><a href="https://www.ntu.edu.sg/about-us/global/india-connect-ntu">NTU-India Connect</a></td>
             </tr>
 
+            <tr>
+              <td>LAB CODES</td>
+              <td>September</td>
+              <td>November</td>
+              <td>Engineering Manager</td>
+              <td><a href="https://labcodes.breezy.hr/">LAB CODE Careers</a></td>
+            </tr>
+
           </tbody>
         </table>
         <script>
