Added about MLH Fellowship

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             <tr>
               <td>Microsoft Learn student Ambassador</td>
               <td>All year</td>
-              <td>April</td>
+              <td>September</td>
               <td>Student Program</td>
               <td>
                 <a href="https://studentambassadors.microsoft.com/">MLSA</a>
@@ -77,6 +77,14 @@
                     <td>Month of closing</td> 
                     <td>Type(Student program,internship, etc)</td>
                     <td>Website Link to apply or read more from</td>-->
+
+            <tr>
+              <td>MLH Fellowship</td>
+              <td>All year</td>
+              <td>September</td>
+              <td>Student Fellowship</td>
+              <td><a href="https://fellowship.mlh.io/">MLH</a></td>
+            </tr>
 
             <tr>
               <td>HNG Internship</td>
