--- a/index.html
+++ b/index.html
@@ -141,6 +141,14 @@
               <td>internship and FTE SDE for girls.</td>
               <td><a href="https://amazonwowindia.splashthat.com/">Amazon Wow</a></td>
             </tr>
+            <tr>
+              <td>  Smart India Hackathon</td>
+              <td>March</td>
+              <td>July</td>
+              <td>Hackathon by government of India.</td>
+              <td><a href="https://www.sih.gov.in/">Smart India Hackathon</a></td>
+            </tr>
+            
             
 
 
