add gradiant background,new oppurtunity

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <style></style>
   </head>
 
-  <body>
-    <div class="outer-wrapper">
+  <body id="grad">
+    <div class="outer-wrapper" id="grad1">
       <div class="table-wrapper">
         <table id="emp-table">
           <thead>
@@ -69,14 +69,6 @@
                 </a>
               </td>
             </tr>
-
-            <!-- add your code here
-                    under a <tr> tag inside a 
-                    <td>write the Name of opportunity</td>
-                    <td>Month of opening</td>
-                    <td>Month of closing</td> 
-                    <td>Type(Student program,internship, etc)</td>
-                    <td>Website Link to apply or read more from</td>-->
 
             <tr>
               <td>MLH Fellowship</td>
@@ -150,6 +142,21 @@
               <td><a href="https://amazonwowindia.splashthat.com/">Amazon Wow</a></td>
             </tr>
             
+            <tr>
+              <td>Github Campus Expert</td>
+              <td>February</td>
+              <td>February</td>
+              <td>Student Program</td>
+              <td><a href="https://githubcampus.expert/">Github Campus Expert</a></td>
+           </tr>
+
+          <!-- add your code here
+          under a <tr> tag inside a 
+          <td>write the Name of oppurtunity</td>
+          <td>Month of opening</td>
+          <td>Month of closing</td> 
+          <td>Type(Student program,internship, etc)</td>
+          <td>Website Link to apply or read more from</td>-->
 
 
           </tbody>
