--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
               <td>Internship</td>
               <td><a href="https://www.outreachy.org/">Outreachy</a></td>
             </tr>
-            
+
             <tr>
               <td>SRFP(Summer Research Fellowship Program)</td>
               <td>October</td>
@@ -115,7 +115,13 @@
               <td>August</td>
               <td>September</td>
               <td>12 Week Foreign Internship</td>
-              <td><a href="https://www.mitacs.ca/en/programs/globalink/globalink-research-internship">MITACS</a></td>
+              <td>
+                <a
+                  href="https://www.mitacs.ca/en/programs/globalink/globalink-research-internship"
+                >
+                  MITACS
+                </a>
+              </td>
             </tr>
 
             <tr>
@@ -123,16 +129,63 @@
               <td>August</td>
               <td>September</td>
               <td>2-6 Months Internship</td>
-              <td><a href="https://www.ntu.edu.sg/about-us/global/india-connect-ntu">NTU-India Connect</a></td>
+              <td>
+                <a
+                  href="https://www.ntu.edu.sg/about-us/global/india-connect-ntu"
+                >
+                  NTU-India Connect
+                </a>
+              </td>
             </tr>
-             <tr>
+            <tr>
               <td>Microsoft Engage</td>
               <td>April</td>
               <td>July</td>
               <td>Student Engagement and Mentorship program.</td>
-              <td><a href="https://acehacker.com/microsoft/engage2022/">Microsoft Engage</a></td>
+              <td>
+                <a href="https://acehacker.com/microsoft/engage2022/">
+                  Microsoft Engage
+                </a>
+              </td>
             </tr>
-            
+
+            <tr>
+              <td>Bank of America</td>
+              <td>July</td>
+              <td>November</td>
+              <td>Summer Internship</td>
+              <td>
+                <a href="https://campus.bankofamerica.com/opportunities.html">
+                  Bank of America
+                </a>
+              </td>
+            </tr>
+
+            <tr>
+              <td>Uber</td>
+              <td>July</td>
+              <td>November</td>
+              <td>Summer Internship</td>
+              <td>
+                <a
+                  href="https://university-uber.icims.com/jobs/116847/job?mobile=false&width=1030&height=500&bga=true&needsRedirect=false&jan1offset=240&jun1offset=240"
+                >
+                  Uber
+                </a>
+              </td>
+            </tr>
+
+            <tr>
+              <td>Web3 Ladies</td>
+              <td>August</td>
+              <td>November</td>
+              <td>Bootcamp</td>
+              <td>
+                <a href="https://www.web3ladies.com/">
+                  Web3 Ladies
+                </a>
+              </td>
+            </tr>
           </tbody>
         </table>
         <script>
