Added new opportunity

--- a/index.html
+++ b/index.html
@@ -115,7 +115,12 @@
               <td>August</td>
               <td>September</td>
               <td>12 Week Foreign Internship</td>
-              <td><a href="https://www.mitacs.ca/en/programs/globalink/globalink-research-internship">MITACS</a></td>
+              <td>
+                <a
+                  href="https://www.mitacs.ca/en/programs/globalink/globalink-research-internship"
+                  >MITACS</a
+                >
+              </td>
             </tr>
 
             <tr>
@@ -123,23 +128,33 @@
               <td>August</td>
               <td>September</td>
               <td>2-6 Months Internship</td>
-              <td><a href="https://www.ntu.edu.sg/about-us/global/india-connect-ntu">NTU-India Connect</a></td>
+              <td>
+                <a
+                  href="https://www.ntu.edu.sg/about-us/global/india-connect-ntu"
+                  >NTU-India Connect</a
+                >
+              </td>
             </tr>
-             <tr>
+            <tr>
               <td>Microsoft Engage</td>
               <td>April</td>
               <td>July</td>
               <td>Student Engagement and Mentorship program.</td>
-              <td><a href="https://acehacker.com/microsoft/engage2022/">Microsoft Engage</a></td>
+              <td>
+                <a href="https://acehacker.com/microsoft/engage2022/"
+                  >Microsoft Engage</a
+                >
+              </td>
             </tr>
-
 
             <tr>
               <td>Amazon Wow</td>
               <td>April</td>
               <td>October</td>
               <td>internship and FTE SDE for girls.</td>
-              <td><a href="https://amazonwowindia.splashthat.com/">Amazon Wow</a></td>
+              <td>
+                <a href="https://amazonwowindia.splashthat.com/">Amazon Wow</a>
+              </td>
             </tr>
 
             <tr>
@@ -147,38 +162,50 @@
               <td>February</td>
               <td>February</td>
               <td>Student Program</td>
-              <td><a href="https://githubcampus.expert/">Github Campus Expert</a></td>
-           </tr>
+              <td>
+                <a href="https://githubcampus.expert/">Github Campus Expert</a>
+              </td>
+            </tr>
 
-           <tr>
-             <td>Github Campus Expert</td>
-             <td>August</td>
-             <td>August</td>
-             <td>Student Program</td>
-             <td><a href="https://githubcampus.expert/">Github Campus Expert</a></td>
-          </tr>
+            <tr>
+              <td>Github Campus Expert</td>
+              <td>August</td>
+              <td>August</td>
+              <td>Student Program</td>
+              <td>
+                <a href="https://githubcampus.expert/">Github Campus Expert</a>
+              </td>
+            </tr>
 
-          <!-- add your code here
+            <tr>
+              <td>Atlassian Women In Tech</td>
+              <td>September</td>
+              <td>October</td>
+              <td>Internship</td>
+              <td>
+                <a href="https://womenintech.girlscript.tech/">Atlassian</a>
+              </td>
+            </tr>
+
+            <!-- add your code here
           under a <tr> tag inside a
           <td>write the Name of oppurtunity</td>
           <td>Month of opening</td>
           <td>Month of closing</td>
           <td>Type(Student program,internship, etc)</td>
           <td>Website Link to apply or read more from</td>-->
-
-
           </tbody>
         </table>
         <script>
           window.onload = () => {
             console.log(
               document.querySelector(
-                '#emp-table > tbody > tr:nth-child(1) > td:nth-child(2) ',
-              ).innerHTML,
-            )
-          }
+                "#emp-table > tbody > tr:nth-child(1) > td:nth-child(2) "
+              ).innerHTML
+            );
+          };
 
-          getUniqueValuesFromColumn()
+          getUniqueValuesFromColumn();
         </script>
       </div>
     </div>
