--- a/index.html
+++ b/index.html
@@ -174,6 +174,20 @@
 								</a>
 							</td>
 						</tr>
+						
+						<tr>
+							<td>Rakuten</td>
+							<td>Aug</td>
+							<td>Jan</td>
+							<td>Internship</td>
+							<td>
+								<a
+									href="https://rakuten.openings.co/?mobile=false&width=1030&height=500&bga=true&needsRedirect=false&jan1offset=240&jun1offset=240"
+								>
+									Rakuten
+								</a>
+							</td>
+						</tr>
 
 						<tr>
 							<td>Web3 Ladies</td>
