Fixed #36: White background in css

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 	</head>
 
 	<body id="grad">
-		<div class="outer-wrapper" id="grad1">
-			<div class="table-wrapper">
+		<div class="outer-wrapper">
+			<div class="table-wrapper" id="grad1">
 				<table id="emp-table">
 					<thead>
 						<th col-index="1">Name</th>
