Added Opportunity and Fixed Issue with Table overflow
Added a Student Opportunity to the HTML.  Fixed issue of the table overflowing the wrapper and spilling onto the background.  The white wrapper for the table should now grow as more content is added.

--- a/index.html
+++ b/index.html
@@ -238,6 +238,18 @@
 							</td>
 						</tr>
 
+						<tr>
+							<td>Scrimba - Bootcamp and/or Classes</td>
+							<td>All year</td>
+							<td>All year</td>
+							<td>Online Classes</td>
+							<td>
+								<a href="http://www.scrimba.com/">Scrimba</a>
+							</td>
+						</tr>
+
+
+
 						<!-- add your code here
           under a <tr> tag inside a
           <td>write the Name of oppurtunity</td>
