--- a/index.html
+++ b/index.html
@@ -237,6 +237,15 @@
 								<a href="http://www.superintern.fun/">Superinterns</a>
 							</td>
 						</tr>
+						<tr>
+							<td>Code Agoda </td>
+							<td>July</td>
+							<td>August</td>
+							<td>Hackathon</td>
+							<td>
+								<a href="https://codegoda.io/">Code Goda</a>
+							</td>
+						</tr>
 
 						<!-- add your code here
           under a <tr> tag inside a
