--- a/index.html
+++ b/index.html
@@ -237,6 +237,15 @@
 								<a href="http://www.superintern.fun/">Superinterns</a>
 							</td>
 						</tr>
+						<tr>
+							<td>Google summer of code</td>
+							<td>March </td>
+							<td>July</td>
+							<td>Open source program </td>
+							<td>
+								<a href="https://summerofcode.withgoogle.com/">Superinterns</a>
+							</td>
+						</tr>
 
 						<!-- add your code here
           under a <tr> tag inside a
