--- a/index.html
+++ b/index.html
@@ -237,6 +237,16 @@
 								<a href="http://www.superintern.fun/">Superinterns</a>
 							</td>
 						</tr>
+						
+						<tr>
+							<td>UniChallenge Vitual & Hybrid Hackathon 2022</td>
+							<td>November</td>
+							<td>November</td>
+							<td>Hackathon</td>
+							<td>
+								<a href="https://thpoint0.io/hackathons/unichallenge2022/">UniChallenge</a>
+							</td>
+						</tr>
 
 						<!-- add your code here
           under a <tr> tag inside a
