--- a/index.html
+++ b/index.html
@@ -277,6 +277,15 @@
                 <a href="https://womenintech.girlscript.tech/">Atlassian</a>
               </td>
             </tr>
+		  <tr>
+							<td>ICPC regionals </td>
+							<td>September</td>
+							<td>September</td>
+							<td>Coding Contest</td>
+							<td>
+								<a href="https://icpc.global/regionals/upcoming">ICPC regionals</a>
+							</td>
+						</tr>
 
             <!-- add your code here
           under a <tr> tag inside a
