added google summer of code open source opportunity

--- a/index.html
+++ b/index.html
@@ -287,6 +287,15 @@
 							</td>
 						</tr>
 
+            <tr>
+              <td>GSoC (Google Summer of Code)</td>
+              <td>Apiril</td>
+              <td>November</td>
+              <td>Open source program</td>
+              <td>
+                <a href="https://summerofcode.withgoogle.com/">Google Summer of Code</a>
+              </td>
+            </tr>
             <!-- add your code here
           under a <tr> tag inside a
           <td>write the Name of oppurtunity</td>
