Added emojis and relevent text formatting to CONTRIBUTING.md file

--- a/index.html
+++ b/index.html
@@ -296,6 +296,15 @@
                 <a href="https://summerofcode.withgoogle.com/">Google Summer of Code</a>
               </td>
             </tr>
+
+            <tr>
+              <td>HacktoberFest</td>
+              <td>October</td>
+              <td>October</td>
+              <td>Open Source Program</td>
+              <td><a href="hacktoberfest.com">HacktoberFest</a></td>
+            </tr>
+
             <!-- add your code here
           under a <tr> tag inside a
           <td>write the Name of oppurtunity</td>
