--- a/index.html
+++ b/index.html
@@ -296,6 +296,16 @@
                 <a href="https://summerofcode.withgoogle.com/">Google Summer of Code</a>
               </td>
             </tr>
+		  
+	      <tr>
+              <td>Walmart SparkPlug</td>
+              <td>October</td>
+              <td>November</td>
+              <td>Internship Opportunity at Walmart</td>
+              <td>
+                <a href="https://unstop.com/hackathon/walmart-sparkplug-2022-walmart-global-tech-in-india-461069">Walmart SparkPlug</a>
+              </td>
+            </tr>
             <!-- add your code here
           under a <tr> tag inside a
           <td>write the Name of oppurtunity</td>
