added new internship

--- a/index.html
+++ b/index.html
@@ -306,6 +306,16 @@
                 <a href="https://unstop.com/hackathon/flipkart-grid-40-software-development-challenge-flipkart-grid-40-flipkart-348170">Flipkart Grid 4.0</a>
               </td>
             </tr>
+
+            <tr>
+              <td>Pinterest Labs Research Intern</td>
+              <td>All year</td>
+              <td>All Year</td>
+              <td>Working on code Challenges</td>
+              <td>
+                <a href="https://www.pinterestcareers.com/job-search-results/?job_type=Intern">Data Science Intern</a>
+              </td>
+            </tr>
             
             <!-- add your code here
           under a <tr> tag inside a
