--- a/index.html
+++ b/index.html
@@ -306,6 +306,17 @@
                 <a href="https://unstop.com/hackathon/flipkart-grid-40-software-development-challenge-flipkart-grid-40-flipkart-348170">Flipkart Grid 4.0</a>
               </td>
             </tr>
+
+            <tr>
+              <td>BUILD FOR WEB3</td>
+              <td>October</td>
+              <td>November</td>
+              <td>Hackathon</td>
+              <td>
+                <a href="https://unstop.com/p/build-for-web3-hack-Bangalore-lumos-labs-462209">BUILD FOR WEB3</a>
+              </td>
+
+            </tr>
             
             <!-- add your code here
           under a <tr> tag inside a
