added AIML intership

--- a/index.html
+++ b/index.html
@@ -327,6 +327,17 @@
                 <a href="https://angel.co/company/reunionhq/jobs/2444362-back-end-developer-internship">AngelList</a>
               </td>
 
+              <tr>
+                <td>AI ML Internship (Voluntary)</td>
+                <td>October</td>
+                <td>November</td>
+                <td>Internship</td>
+                <td>
+                  <a href="https://angel.co/company/in-cube-digital-foundation/jobs/2422171-ai-ml-intern">AngelList</a>
+                </td>
+  
+              </tr>
+
             </tr>
             
             <!-- add your code here
