added new job opportunity

--- a/index.html
+++ b/index.html
@@ -339,6 +339,14 @@
               </tr>
 
             </tr>
+
+            <tr>
+              <td>Xpert Direct</td>
+              <td>October</td>
+              <td>November</td>
+              <td>Software Developer</td>
+              <td><a href="https://www.linkedin.com/company/xpertdirect/">Xpert Direct</a></td>
+            </tr>
             
             <!-- add your code here
           under a <tr> tag inside a
