change title bar and CSS styling

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
     <script src="./filter.js"></script>
 
-    <title>Index</title>
+    <title>StudentHelp</title>
     <style></style>
   </head>
 
