--- a/index.html
+++ b/index.html
@@ -339,6 +339,17 @@
               </tr>
 
             </tr>
+
+            <tr>
+              <td>NEAR MetaBUILD III Hackathon</td>
+              <td>November</td>
+              <td>December</td>
+              <td>Hackathon</td>
+              <td>
+                <a href=https://metabuild.devpost.com/details/dates">NEAR MetaBUILD III Hackathon</a>
+              </td>
+
+            </tr>
             
             <!-- add your code here
           under a <tr> tag inside a
