--- a/index.html
+++ b/index.html
@@ -339,6 +339,15 @@
               </tr>
 
             </tr>
+            <tr>
+            	<td>Amazon Internship</td>
+              <td>All year</td>
+              <td>All year</td>
+                <td>Internship</td>
+                <td>
+                  <a href="https://www.amazon.jobs/en/jobs/2281580/data-center-engineering-operations-dceo-trainee-6-months">Amazon</a>
+                </td>
+            </tr>
             
             <!-- add your code here
           under a <tr> tag inside a
