added Spectrum Internship

--- a/index.html
+++ b/index.html
@@ -59,6 +59,18 @@
             </tr>
 
             <tr>
+              <td>Spectrum - Summer Intern: Assoc Software Engineer</td>
+              <td>September</td>
+              <td>April</td>
+              <td>Internship</td>
+              <td>
+                <a href="https://jobs.spectrum.com/job/st-louis/2023-summer-intern-assoc-software-engineer/4673/37118387632">
+                  Apply at Spectrum
+                </a>
+              </td>
+            </tr>
+
+            <tr>
               <td>GDSC Lead</td>
               <td>April</td>
               <td>April</td>
